refactor: port to jdk8