@@ -1,5 +1,7 @@
 package com.mxraven.mail.mime;
 
+import com.mxraven.mail.internal.Java8;
+
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
@@ -22,22 +24,22 @@ class AttachmentTest {
         Path target = directory.resolve("out.txt");
 
         assertEquals(target, attachment().download(target));
-        assertEquals("hello", Files.readString(target));
+        assertEquals("hello", new String(Files.readAllBytes(target), StandardCharsets.UTF_8));
     }
 
     @Test
     void downloadsIntoADirectoryUsingTheFilename(@TempDir Path directory) throws Exception {
         assertEquals(directory.resolve("notes.txt"), attachment().download(directory));
-        assertEquals("hello", Files.readString(directory.resolve("notes.txt")));
+        assertEquals("hello", new String(Files.readAllBytes(directory.resolve("notes.txt")), StandardCharsets.UTF_8));
     }
 
     @Test
     void exposesStreamAndOutputStream() throws Exception {
         assertEquals("hello",
-                new String(attachment().openStream().readAllBytes(), StandardCharsets.UTF_8));
+                new String(Java8.readAllBytes(attachment().openStream()), StandardCharsets.UTF_8));
 
         ByteArrayOutputStream out = new ByteArrayOutputStream();
         attachment().writeTo(out);
-        assertEquals("hello", out.toString(StandardCharsets.UTF_8));
+        assertEquals("hello", new String(out.toByteArray(), StandardCharsets.UTF_8));
     }
 }
